--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav .left a{
   font-size: 22px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family:  "Solway", serif;
+  font-family: "Solway", serif;
   transition: 0.3s ease;
 }
 nav span{
@@ -42,8 +42,7 @@ nav span{
 }
 nav .left a:hover{
   color: #000000;
-  text-shadow: 0 0 25px #6B705C;
-  0 0 50px #6B705C;
+  text-shadow: 0 0 25px #6B705C, 0 0 50px #6B705C;
   transform: scale(1.1);
 }
 nav .right a{
